src/test/ui/fmt/format-string-error-2.stderr
error: invalid format string: expected `'}'`, found `'a'`
  --> $DIR/format-string-error-2.rs:5:5
   |
LL |     format!("{
   |              - because of this opening brace
LL |     a");
   |     ^ expected `}` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'b'`
  --> $DIR/format-string-error-2.rs:9:5
   |
LL |     format!("{ /
   |              - because of this opening brace
LL | 
LL |     b");
   |     ^ expected `}` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'/'`
  --> $DIR/format-string-error-2.rs:11:18
   |
LL |     format!(r#"{ /
   |                - ^ expected `}` in format string
   |                |
   |                because of this opening brace
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'/'`
  --> $DIR/format-string-error-2.rs:15:18
   |
LL |     format!(r#"{ /n
   |                - ^ expected `}` in format string
   |                |
   |                because of this opening brace
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'e'`
  --> $DIR/format-string-error-2.rs:21:5
   |
LL |     format!("{ /n
   |              - because of this opening brace
LL | /n
LL |     e");
   |     ^ expected `}` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'a'`
  --> $DIR/format-string-error-2.rs:25:5
   |
LL |     {
   |     - because of this opening brace
LL |     a");
   |     ^ expected `}` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'a'`
  --> $DIR/format-string-error-2.rs:29:5
   |
LL |     {
   |     - because of this opening brace
LL |     a
   |     ^ expected `}` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'b'`
  --> $DIR/format-string-error-2.rs:35:5
   |
LL |     { /
   |     - because of this opening brace
LL |         /
LL |     b");
   |     ^ expected `}` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'b'`
  --> $DIR/format-string-error-2.rs:40:5
   |
LL |     { /
   |     - because of this opening brace
LL |         /
LL |     b /
   |     ^ expected `}` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'/'`
  --> $DIR/format-string-error-2.rs:45:8
   |
LL | raw  { /
   |      - ^ expected `}` in format string
   |      |
   |      because of this opening brace
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'/'`
  --> $DIR/format-string-error-2.rs:50:8
   |
LL | raw  { /n
   |      - ^ expected `}` in format string
   |      |
   |      because of this opening brace
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'e'`
  --> $DIR/format-string-error-2.rs:57:5
   |
LL |   { /n
   |   - because of this opening brace
LL | /n
LL |     e");
   |     ^ expected `}` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: expected `'}'`, found `'a'`
  --> $DIR/format-string-error-2.rs:67:5
   |
LL |     {
   |     - because of this opening brace
LL |     asdf}
   |     ^ expected `}` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: aborting due to 13 previous errors

